# contatester

./: .gitattributes  .gitignore  .gitlab-ci.yml  .install_useq.sh  .zenodo.json  All_in_one_contatester3.sh  Dockerfile  MANIFEST.in  README.md  banner.ansi  calculAllelicBalance.sh  checkContaminant.sh  contaIntraProjet.rda  contaReport.R  install_useq.sh  recupConta.sh  run_tests.sh  setup.cfg  setup.py
contatester/: .gitattributes  .gitignore  README.md  setup.cfg  setup.py
contatester/src/fr/cea/lbi/contatester/: __main__.py
contatester/tests/fr/cea/lbi/contatester/: test_cli.py  test_main.py
data/: contaIntraProjetEX60x.rda  contaIntraProjetEX90x.rda  contaIntraProjetWG30x.rda  contaIntraProjetWG60x.rda  contaIntraProjetWG90x.rda  lcr_seg_dup_gnomad_2.0.2_GRCh37.bed.gz.tbi  lcr_seg_dup_gnomad_2.0.2_GRCh38.bed.gz.unmap
data_examples/: calculAllelicBalance_output.hist  distrib_allele_balance.conta  distrib_allele_balance.hist  test_1_AB_0.00_to_0.11_noLCRnoDUP.vcf.gz.tbi  test_1_AB_0.01_to_0.12_noLCRnoDUP.bed  test_1_AB_0.01_to_0.12_noLCRnoDUP.vcf  test_1_AB_0.01_to_0.12_noLCRnoDUP.vcf.gz.tbi  test_1_comparisonSummary.txt  vcfs_list.txt
scripts/: calculAllelicBalance.sh  checkContaminant.sh  contaReport.R  depth_estim_from_vcf.sh  rPackageInstaller.r  recupConta.sh
src/fr/cea/cnrgh/lbi/contatester/: __main__.py
src/fr/cea/lbi/contatester/: __main__.py
tests/fr/cea/cnrgh/lbi/contatester/: test_cli.py  test_main.py
tests/fr/cea/lbi/contatester/: test_cli.py  test_main.py
tests/fr/cea/lbi/contatester/resources/: batch_file1_ccrt.msub  (+4 more)
(+14 files in other folders)
