[metadata]
name        = contatester
version     = 1.0.0
description = Detect human contamination for whole genome non-tumorous human sequencing.
author      = Damien DELAFOY
license     = CeCILL
license_file= LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: CeCILL Free Software License Agreement (CeCILL)
    Programming Language :: Python :: 3.6
keywords=contamination, vcf, allelic balance, Whole Genome'

[aliases]
build 	    = bdist_wheel
test	    = pytest
addopts	    = --color=yes -ra --cache-clear

[bdist_wheel]
universal   = 1

[install]
optimize    = 2
